CMS7-9246: Fix for context-menu that is higher than the viewPort height  - adds a scroll bar if context menuis bigger than viewport  - align context menu with bottom (works nice for tree, needs a different approach for document-tabs context menu)

--- a/cms/api/src/main/styling/less/_hippo_menu.less
+++ b/cms/api/src/main/styling/less/_hippo_menu.less
@@ -71,3 +71,10 @@
     }
   }
 }
+
+.scrollable-context-menu {
+  height: 99vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  display: block;
+}
